tests/reject/errorAvocadoVarNoRet.emojic
🐇 🐟 🍇
  🐇❗️ 💚 🚧🚧 🍇
  🍉
🍉

🏁 🍇
  🥑 a 💚🐇🐟❗️ 🍇

  🍉
  🙅 error 🍇
    😀 🍪🔤An error occured: 🔤 💬error❗️ 🍪 ❗️
  🍉
🍉
